# Acto_sphere

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
Acto-Sphere/: CHANGELOG.md  FUTURE_ROADMAP.md  README.md
Acto-Sphere/cpp/: monitor.cpp
Acto-Sphere/cs/ActoVault/: Program.cs
Acto-Sphere/go/: go.mod  main.go
Acto-Sphere/go/ingestor/: Dockerfile  go.mod  main.go
Acto-Sphere/jav/src/main/java/com/example/logserver/: LogServer.java
Acto-Sphere/js/: package.json  server.js
Acto-Sphere/js/public/: dashboard.html
Acto-Sphere/kt/app/src/main/: AndroidManifest.xml
Acto-Sphere/kt/app/src/main/java/com/example/actosphere/: MainActivity.kt
Acto-Sphere/py/: Dockerfile  acto_interpreter.py  analytics.py  data_converter.py  requirements.txt  rules.acto
Acto-Sphere/py/schemas/: csv_schema.json  log_schema.xsd
Acto-Sphere/rb/: acto_launcher.rb
Acto-Sphere/rust/analytics/: Cargo.toml  Dockerfile
Acto-Sphere/rust/analytics/src/: main.rs
Acto-Sphere/scripts/: auto_commit.sh  setup_check.sh
Acto-Sphere/sh/: upload.sh
